# autoparq

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml  release.yml
benches/: profiler_throughput.rs
docs/: REFERENCES.md  mkdocs.yml
docs/docs/: contributing.md  index.md
docs/docs/commands/: apply.md  bench.md  info.md  tune.md
docs/docs/concepts/: codecs.md  encodings.md
examples/: gen_fixtures.rs
python/autoparq/: cli.py  codegen.py  render.py
specs/001_basic_functionality/: PLAN.md  PRD.md  TASKS.md
specs/002_web_app/: CONFLICTS.md  PLAN.md  PRD.md  TASKS.md
specs/003_ux_improvements/: CONFLICTS.md  PLAN.md  PRD.md  TASKS.md
specs/004_references/: CONFLICTS.md  PLAN.md  PRD.md  TASKS.md
specs/005_bench_wasm/: CONFLICTS.md  PLAN.md  PRD.md  TASKS.md
specs/006_hint_diagnostics/: CONFLICTS.md  PLAN.md  PRD.md  TASKS.md
specs/007_scannable_columns/: CONFLICTS.md  PLAN.md  PRD.md  TASKS.md
specs/008_apply_in_browser/: CONFLICTS.md  PLAN.md  PRD.md  TASKS.md
specs/009_github_pages_deploy/: PLAN.md  PRD.md  TASKS.md
specs/010_delta_string_encodings/: PRD.md
src/: advisor.rs  apply.rs  bench.rs  codegen.rs  diagnostics.rs  error.rs  lib.rs  tuner.rs  wasm.rs
src/profiler/: metadata.rs  mod.rs  sampler.rs  stats.rs
src/recommender/: codec.rs  encoding.rs  engine.rs  mod.rs
tests/integration/: mod.rs  test_apply.rs  test_info.rs  test_tune.rs
tests/integration/snapshots/: integration__test_tune__low_cardinality_strings_tune.snap  integration__test_tune__monotonic_ints_tune.snap
tests/python/: conftest.py  test_cli_exit_codes.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.js  main.js  mock-report.js  style.css  ui.js  wasm-bridge.js
web/src/components/: CodeBlock.js  ConfidenceBadge.js  ImpactStars.js  SnippetPanel.js  Tooltip.js
web/src/lib/: codec.js  download.js
web/src/render/: advisories.js  (+5 more)
(+1 files in other folders)
