[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "autoparq"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["typer>=0.12", "rich>=13"]

[project.scripts]
autoparq = "autoparq.cli:app"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.maturin]
python-source = "python"
module-name = "autoparq._lib"
features = ["python"]
